--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { SOCIALS } from "@config";
 const posts = await getCollection("blog");
 
 const sortedPosts = getSortedPosts(posts);
-const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
+// const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
 
 const socialCount = SOCIALS.filter(social => social.active).length;
 ---
@@ -94,7 +94,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
           )
         }
       </ul>
-      <div class="all-posts-btn-wrapper">
+      <!-- <div class="all-posts-btn-wrapper">
         <LinkButton href="/posts">
           All Posts
           <svg xmlns="http://www.w3.org/2000/svg"
@@ -103,7 +103,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
             ></path>
           </svg>
         </LinkButton>
-      </div>
+      </div> -->
     </section>
   </main>
 
